updated opera.html, opera2.html, gs.css and added 2 images

--- a/gs.css
+++ b/gs.css
@@ -163,3 +163,26 @@
 #singers tr:nth-child(odd){
     background-color:cornsilk;
     }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: green;
+    display: inline;
+    }
+      
+li {
+    float: left;
+    }
+      
+li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    }
+      
+li a:hover{
+    background-color: black;
+    }
