--- a/gs.css
+++ b/gs.css
@@ -168,7 +168,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: green;
+    background-color: black;
     display: inline;
     }
       
@@ -184,5 +184,5 @@ li a {
     }
       
 li a:hover{
-    background-color: black;
+    background-color: white;
     }
